# rust-workspace-github-template

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  crates.js  help.html  release-plz.toml  settings.html  src-files.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  benchmark.yml  dependencies.yml  documentation-generate.yml  format-check.yml  licenses-check.yml  lint-check.yml  nightly.yml  pr-title-validate.yml  release-plz.yml  semver-check.yml  semver-checks.yml  test.yml  unused-dependencies-check.yml  version-check.yml  zizmor.yml
benchmark-data/latest/my_function/base/: estimates.json  sample.json  tukey.json
benchmark-data/latest/my_function/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmark-data/latest/my_function/report/: index.html
benchmark-data/latest/report/: index.html
benchmark-history/my_function/base/: estimates.json  sample.json  tukey.json
benchmark-history/my_function/new/: estimates.json  sample.json  tukey.json
benchmark-history/my_function/report/: index.html
crates/lib/: Cargo.toml
crates/lib/benches/: criterion_benches.rs  iai_benches.rs
crates/lib/src/: lib.rs
crates/template_bin/: CHANGELOG.md  Cargo.toml  README.md
crates/template_bin/src/: main.rs
crates/template_lib/: Cargo.toml  README.md
crates/template_lib/benches/: criterion_benches.rs
crates/template_lib/src/: lib.rs
scripts/: audit.sh  benchmark-cycle-time.sh  benchmark.sh  dependencies.sh  documentation-generate.sh  format-check.sh  functions.sh  git-pre-push.sh  hooks.sh  licenses-check.sh  lint-check.sh  lint.sh  test.sh  version-check.sh
search.index/: root.js
search.index/crateNames/: 9dece55a32dd.js
search.index/desc/: def6dcd5ce.js
search.index/entry/: a5609ada68.js  e6196185e69d.js  ecc731e2f978.js
search.index/function/: e5b7bf14320a.js
search.index/name/: 784ad13d90.js
search.index/normalizedName/: 5033865623d4.js
search.index/path/: a5b372f81027.js
search.index/type/: 4d44d9178d09.js
src/template_bin/: main.rs.html
src/template_lib/: lib.rs.html
template_bin/: all.html  fn.main.html  index.html
template_lib/: all.html  fn.add.html  index.html
