[package]
name = "lib"
version = "0.1.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
iai-callgrind = { workspace = true }

# Wall-time benchmarks (for local development)
[[bench]]
name = "criterion_benches"
harness = false

# Cycle-count benchmarks (for CI determinism)
[target.'cfg(target_os = "linux")'.bench]
name = "iai_benches"
harness = false
