[package]
name = "template_bin"
version = "0.1.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
template_lib.workspace = true

[lints]
workspace = true
