[package]
name = "template_lib"
version = "0.1.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
criterion.workspace = true

# Benchmarks
[[bench]]
name = "criterion_benches" # Also in benchmark.sh and benchmark.yml
bench = true
harness = false
test = false
